force-app/main/default/objects/PDRI__Invocation__c/PDRI__Invocation__c.object-meta.xml
<CustomObject>
    <label>Invocation</label>
    <nameField>
        <displayFormat>INV-{00000000}</displayFormat>
        <label>Invocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>