force-app/main/default/objects/PDRI__Invocation__c/fields/PDRI__Data_Set__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Data_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Set</label>
    <referenceTo>PDRI__DataSet__c</referenceTo>
    <relationshipLabel>Invocations</relationshipLabel>
    <relationshipName>Invocations</relationshipName>
    <type>Lookup</type>
</CustomField>