force-app/main/default/objects/PDRI__Invocation__c/fields/PDRI__Data_Set_Element__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Data_Set_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Set Element</label>
    <referenceTo>PDRI__DataSet__c</referenceTo>
    <relationshipLabel>Invocations (Data Set Element)</relationshipLabel>
    <relationshipName>Invocations1</relationshipName>
    <type>Lookup</type>
</CustomField>