force-app/main/default/objects/PDRI__Invocation__c/fields/PDRI__Invocation_Rule__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Invocation_Rule__c</fullName>
    <label>Invocation Rule</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PDRI__Invocation_Order__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Stop deployment if invocation fails.</fullName>
                <default>true</default>
                <label>Stop deployment if invocation fails.</label>
            </value>
            <value>
                <fullName>Continue deployment if invocation fails.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>