force-app/main/default/objects/PDRI__Invocation__c/fields/PDRI__Invocation_Scope__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Invocation_Scope__c</fullName>
    <label>Invocation Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PDRI__Deployment_Scope</valueSetName>
    </valueSet>
</CustomField>