force-app/main/default/objects/PDRI__Invocation__c/fields/PDRI__Invocation_Template__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Invocation_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invocation Template</label>
    <referenceTo>PDRI__Invocation_Template__c</referenceTo>
    <relationshipLabel>Invocations</relationshipLabel>
    <relationshipName>Invocations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>